Implemented Multiple NFTs (#50)
