# src/routes/collection.ts
@@ -2,7 +2,7 @@ import express from 'express';
 import * as controller from '../controllers/collection.controller';
 import { createCollectionValidator } from '../middlewares/create.collection.validator';
 import { updateCollectionValidator } from '../middlewares/update.collection.validator';
-import { multerUpload } from '../helpers/aws/image.uploader';
+import { multerUpload, collectionAssetMulterUpload } from '../helpers/aws/image.uploader';
 import {
   createCollectionExpValidator,
   getCollectionExpValidator
@@ -10,6 +10,15 @@ import {
 import { cleanUpMulterFiles } from '../handlers/file.cleanup.handler';
 import { updateCollectionExpValidator } from '../middlewares/update.collection.exp.validator';
 import { payoutValidator } from '../middlewares/payout.validator';
+import {
+  addCollectionAssetsExpValidator,
+  addCollectionAssetsValidator,
+  deleteCollectionAssetsValidator
+} from '../middlewares/add.collection.asset.validator';
+import {
+  updateCollectionAssetsExpValidator,
+  updateCollectionAssetsValidator
+} from '../middlewares/update.collection.asset.validator';
 
 const router = express.Router({ mergeParams: true });
 
@@ -43,5 +52,18 @@ router.put('/:collection_id',
 );
 
 router.get('/:collection_id/mints', controller.handleGetMintTransactions);
+
+router.post('/:collection_id/assets',
+  collectionAssetMulterUpload.array('assets', 20),
+  cleanUpMulterFiles,
+  addCollectionAssetsExpValidator(),
+  addCollectionAssetsValidator,
+  controller.handleAddCollectionAssets,
+);
+
+router.get('/:collection_id/assets', controller.handleGetCollectionAssets);
+router.put('/:collection_id/assets', updateCollectionAssetsExpValidator(), updateCollectionAssetsValidator, controller.handleUpdateCollectionAssets);
+router.delete('/:collection_id/assets', deleteCollectionAssetsValidator(), controller.handleDeleteCollectionAssets);
+
 
 export default router;
